@@ -7,6 +7,7 @@
  - With Visual C++, creates lib/ directory if not already present
  - Useful error messages when preparing statements
  - Allows prepared statements to be registered explicitly
+ - Support for "long long" types; enable with PQXX_ALLOW_LONG_LONG macro
 2.6.8
  - Fixes bug: binary parameters to prepared statements truncated at nul bytes
  - New, more specific exception types to distinguish errors from server
